[package]
name = "ale-client"
version = "0.1.0"
authors = ["Arvind Mahto <runmahtorun@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
dotenv = "0.15"
chrono = { version = "0.4.11", features = ["serde"]}
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
uuid = "0.8.1"
log = "0.4.8"
fern = { version = "0.6.0", features = ["colored"]}
structopt = "0.2.15"
anyhow = "1.0"
sysinfo = "0.14.11"


[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
