[package]
name = "ale-server"
version = "0.1.0"
authors = ["mahto"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.11.0"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
dotenv = "0.15"
pretty_env_logger = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"]}
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
uuid = "0.8.1"
log = "0.4.8"
structopt = "0.2.15"
anyhow = "1.0"
refinery = "0.3.0"
sqlx = { version = "0.3.4", features = ["runtime-async-std", "macros", "chrono", "json", "sqlite", "uuid"]}

